--- a/examples/DeviceLibTest/res/values/strings.xml
+++ b/examples/DeviceLibTest/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="title_activity_am3">AM3</string>
     <string name="title_activity_bp7s">Bp7s</string>
     <string name="title_activity_bp550_bt">Bp550BT</string>
+    <string name="title_activity_am3s">AM3S</string>
     <string name="title_activity_am4">AM4</string>
     <string name="title_activity_bp926">Bp926</string>
 
